--- a/mount_to_colab.ipynb
+++ b/mount_to_colab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "mount_to_colab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO+ZD86HPL4s9IyRf+iysrF",
+      "authorship_tag": "ABX9TyOwbwEhv3Z4Vui0n+/Ybsqr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,8 @@
         }
       },
       "source": [
+        "# edited in colab\n",
+        "\n",
         "import os\n",
         "import sys\n",
         "\n",
@@ -61,7 +63,7 @@
         "if GIT_LOCAL_PATH not in sys.path:\n",
         "    sys.path.append(GIT_LOCAL_PATH)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
